isa/arm/logs/all-glibc-install.log
make[1]: Entering directory '/root/arm-gcc-build/source/glibc-2.39/glibc_build'
LC_ALL=C; export LC_ALL; \
make -r PARALLELMFLAGS="" -C .. objdir=`pwd` install
make[2]: Entering directory '/root/arm-gcc-build/source/glibc-2.39'
make  subdir=csu -C csu ..=../ subdir_lib
make[3]: Entering directory '/root/arm-gcc-build/source/glibc-2.39/csu'
python3 -B ../scripts/gen-as-const.py --cc="gcc -std=gnu11 -fgnu89-inline  -g -O2 -Wall -Wwrite-strings -Wundef -Werror -fmerge-all-constants -frounding-math -fno-stack-protector -fno-common -Wp,-U_FORTIFY_SOURCE -Wstrict-prototypes -Wold-style-definition -fmath-errno      -ftls-model=initial-exec     -I../include -I/root/arm-gcc-build/source/glibc-2.39/glibc_build/csu  -I/root/arm-gcc-build/source/glibc-2.39/glibc_build  -I../sysdeps/unix/sysv/linux/arm/le  -I../sysdeps/unix/sysv/linux/arm  -I../sysdeps/arm/nptl  -I../sysdeps/unix/sysv/linux/include -I../sysdeps/unix/sysv/linux  -I../sysdeps/nptl  -I../sysdeps/pthread  -I../sysdeps/gnu  -I../sysdeps/unix/inet  -I../sysdeps/unix/sysv  -I../sysdeps/unix/arm  -I../sysdeps/unix  -I../sysdeps/posix  -I../sysdeps/arm/le  -I../sysdeps/arm/include -I../sysdeps/arm  -I../sysdeps/wordsize-32  -I../sysdeps/ieee754/flt-32  -I../sysdeps/ieee754/dbl-64  -I../sysdeps/ieee754  -I../sysdeps/generic  -I.. -I../libio -I. -nostdinc -isystem /usr/lib/gcc/x86_64-linux-gnu/9/include -isystem /root/arm-gcc-build/tools/arm-linux-gnueabihf/include  -D_LIBC_REENTRANT -include /root/arm-gcc-build/source/glibc-2.39/glibc_build/libc-modules.h -DMODULE_NAME=libc -include ../include/libc-symbols.h       -DTOP_NAMESPACE=glibc -DGEN_AS_CONST_HEADERS \
		   -MD -MP -MF /root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h.dT \
		   -MT '/root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h.d /root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h'" \
	  rtld-sizes.sym > /root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.hT
In file included from ../include/stdint.h:1,
                 from ../elf/elf.h:24,
                 from ../include/elf.h:2,
                 from ../elf/link.h:24,
                 from ../include/link.h:35,
                 from <stdin>:1:
../stdlib/stdint.h:98: error: "__INT64_C" redefined [-Werror]
   98 | #  define __INT64_C(c) c ## LL
      | 
<built-in>: note: this is the location of the previous definition
In file included from ../include/stdint.h:1,
                 from ../elf/elf.h:24,
                 from ../include/elf.h:2,
                 from ../elf/link.h:24,
                 from ../include/link.h:35,
                 from <stdin>:1:
../stdlib/stdint.h:99: error: "__UINT64_C" redefined [-Werror]
   99 | #  define __UINT64_C(c) c ## ULL
      | 
<built-in>: note: this is the location of the previous definition
In file included from ../sysdeps/unix/arm/sysdep.h:19,
                 from ../sysdeps/unix/sysv/linux/arm/sysdep.h:23,
                 from ../sysdeps/nptl/lowlevellock-futex.h:23,
                 from ../sysdeps/nptl/lowlevellock.h:24,
                 from ../nptl/descr.h:28,
                 from ../sysdeps/arm/nptl/tls.h:39,
                 from ../sysdeps/unix/sysv/linux/arm/tls.h:23,
                 from ../include/link.h:51,
                 from <stdin>:1:
../sysdeps/arm/sysdep.h:49:4: error: #error unknown arm architecture
   49 | #  error unknown arm architecture
      |    ^~~~~
../sysdeps/arm/sysdep.h:53:5: error: "__ARM_ARCH" is not defined, evaluates to 0 [-Werror=undef]
   53 | #if __ARM_ARCH > 4 || defined (__ARM_ARCH_4T__)
      |     ^~~~~~~~~~
../sysdeps/arm/sysdep.h:56:5: error: "__ARM_ARCH" is not defined, evaluates to 0 [-Werror=undef]
   56 | #if __ARM_ARCH > 4
      |     ^~~~~~~~~~
../sysdeps/arm/sysdep.h:59:5: error: "__ARM_ARCH" is not defined, evaluates to 0 [-Werror=undef]
   59 | #if __ARM_ARCH > 6 || defined (__ARM_ARCH_6K__) || defined (__ARM_ARCH_6ZK__)
      |     ^~~~~~~~~~
../sysdeps/arm/sysdep.h:62:5: error: "__ARM_ARCH" is not defined, evaluates to 0 [-Werror=undef]
   62 | #if __ARM_ARCH > 6 || defined (__ARM_ARCH_6T2__)
      |     ^~~~~~~~~~
cc1: all warnings being treated as errors
Traceback (most recent call last):
  File "../scripts/gen-as-const.py", line 120, in <module>
    main()
  File "../scripts/gen-as-const.py", line 116, in main
    consts = glibcextract.compute_c_consts(sym_data, args.cc)
  File "/root/arm-gcc-build/source/glibc-2.39/scripts/glibcextract.py", line 63, in compute_c_consts
    subprocess.check_call(cmd, shell=True)
  File "/usr/lib/python3.8/subprocess.py", line 364, in check_call
    raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command 'gcc -std=gnu11 -fgnu89-inline  -g -O2 -Wall -Wwrite-strings -Wundef -Werror -fmerge-all-constants -frounding-math -fno-stack-protector -fno-common -Wp,-U_FORTIFY_SOURCE -Wstrict-prototypes -Wold-style-definition -fmath-errno      -ftls-model=initial-exec     -I../include -I/root/arm-gcc-build/source/glibc-2.39/glibc_build/csu  -I/root/arm-gcc-build/source/glibc-2.39/glibc_build  -I../sysdeps/unix/sysv/linux/arm/le  -I../sysdeps/unix/sysv/linux/arm  -I../sysdeps/arm/nptl  -I../sysdeps/unix/sysv/linux/include -I../sysdeps/unix/sysv/linux  -I../sysdeps/nptl  -I../sysdeps/pthread  -I../sysdeps/gnu  -I../sysdeps/unix/inet  -I../sysdeps/unix/sysv  -I../sysdeps/unix/arm  -I../sysdeps/unix  -I../sysdeps/posix  -I../sysdeps/arm/le  -I../sysdeps/arm/include -I../sysdeps/arm  -I../sysdeps/wordsize-32  -I../sysdeps/ieee754/flt-32  -I../sysdeps/ieee754/dbl-64  -I../sysdeps/ieee754  -I../sysdeps/generic  -I.. -I../libio -I. -nostdinc -isystem /usr/lib/gcc/x86_64-linux-gnu/9/include -isystem /root/arm-gcc-build/tools/arm-linux-gnueabihf/include  -D_LIBC_REENTRANT -include /root/arm-gcc-build/source/glibc-2.39/glibc_build/libc-modules.h -DMODULE_NAME=libc -include ../include/libc-symbols.h       -DTOP_NAMESPACE=glibc -DGEN_AS_CONST_HEADERS 		   -MD -MP -MF /root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h.dT 		   -MT '/root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h.d /root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h' -S -o /tmp/tmpnuucmsdh/test.s -x c - < /tmp/tmpnuucmsdh/test.c' returned non-zero exit status 1.
make[3]: *** [../Makerules:271: /root/arm-gcc-build/source/glibc-2.39/glibc_build/rtld-sizes.h] Error 1
make[3]: Leaving directory '/root/arm-gcc-build/source/glibc-2.39/csu'
make[2]: *** [Makefile:484: csu/subdir_lib] Error 2
make[2]: Leaving directory '/root/arm-gcc-build/source/glibc-2.39'
make[1]: *** [Makefile:12: install] Error 2
make[1]: Leaving directory '/root/arm-gcc-build/source/glibc-2.39/glibc_build'
